--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><!-- <strong>BUD</strong>FOTOGRAFIA <--><img src="images/logo.png" alt="BUD Fotografia" /></a></h1>
+						<h1><a href="index.html"><!-- <strong>BUD</strong>FOTOGRAFIA <--><img src="images/logo.svg" alt="Bud - Fotografia em São Paulo - Brasil" /></a></h1>
 						<nav>
 							<ul>
 							    <a href="https://instagram.com/budhelisson" target="_blank" class="icon icon-insta fa-instagram"><span class="label"></span></a>
