--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 									<p>A fotografia pra mim é algo que acontece de dentro pra fora. Gosto de enxergar o mundo através das luzes, sombras, brilhos, contrastes, cores, formas e curvas.<br/>Se quiser experimentar essa experiência comigo é só entrar em contato.<br/>o/</p>
 								</section>
 								<section>
-								    <h2 class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5561996761988&text=Olá,%20gostaria%20de%20fazer%20um%20orçamento!" target="_blank">Clique para me chamar no WHATASAPP...</a></h2>
+								    <h2 class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5561996761988&text=Olá,%20gostaria%20de%20fazer%20um%20orçamento!" target="_blank">Clique para chamar no WHATSAPP!</a></h2>
 								</section>
 								<section>
 									<h2>Redes Sociais / Follow me...</h2>
