--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
 							<div>
 								<section>
 									<h2>Contato / Orçamento</h2>
-									<form method="post" action="#">
+									<form method="POST" action="http://formspree.io/helissonss@gmail.com">
 										<div class="field half first">
 											<input type="text" name="name" id="name" placeholder="Nome" />
 										</div>
 										<div class="field half">
-											<input type="text" name="email" id="email" placeholder="E-mail" />
+											<input type="email" name="email" id="email" placeholder="E-mail" />
 										</div>
 										<div class="field">
 											<textarea name="message" id="message" rows="4" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
