--- a/index.html
+++ b/index.html
@@ -265,5 +265,14 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
+			<script>
+				$.ajax({
+				    url: "https://formspree.io/helissonss@gmail.com", 
+				    method: "POST",
+				    data: {message: "hello!"},
+				    dataType: "json"
+				});
+			</script>
+
 	</body>
 </html>
