--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 											<input type="text" name="name" id="name" placeholder="Nome" />
 										</div>
 										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="E-mail" />
+											<input type="email" name="_replyto" id="email" placeholder="E-mail" />
 										</div>
 										<div class="field">
 											<textarea name="message" id="message" rows="4" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
@@ -249,6 +249,8 @@
 											<li><input type="submit" value="Enviar" class="special" /></li>
 											<li><input type="reset" value="Limpar" /></li>
 										</ul>
+										<input type="hidden" name="_language" value="pt-BR" />
+										<input type="text" name="_gotcha" style="display:none" />
 									</form>
 								</section>
 							</div>
