--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 									<h2>Contato / Orçamento</h2>
 									<form method="POST" action="http://formspree.io/helissonss@gmail.com">
 										<div class="field half first">
-											<input type="text" name="name" id="name" placeholder="Nome" />
+											<input type="text" name="name" id="name" placeholder="Nome" required="Campo obrigatório" />
 										</div>
 										<div class="field half">
 											<input type="email" name="_replyto" id="email" placeholder="E-mail" />
