--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
 											<input type="text" name="name" id="name" placeholder="Nome" required="Campo obrigatório" />
 										</div>
 										<div class="field half">
-											<input type="email" name="_replyto" id="email" placeholder="E-mail" />
+											<input type="email" name="_replyto" id="email" placeholder="E-mail" required="Campo obrigatório" />
 										</div>
 										<div class="field">
-											<textarea name="message" id="message" rows="4" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
+											<textarea name="message" id="message" rows="4" required="Campo obrigatório" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
 										</div>
 										<input type="hidden" name="_language" value="pt-BR" />
 										<ul class="actions">
