--- a/index.html
+++ b/index.html
@@ -237,15 +237,16 @@
 									<h2>Contato / Orçamento</h2>
 									<form method="POST" action="http://formspree.io/helissonss@gmail.com">
 										<div class="field half first">
-											<input type="text" name="name" id="name" placeholder="Nome" required="Campo obrigatório" />
+											<input type="text" name="name" id="name" placeholder="Nome" required="" />
 										</div>
 										<div class="field half">
-											<input type="email" name="_replyto" id="email" placeholder="E-mail" required="Campo obrigatório" />
+											<input type="email" name="email" id="email" placeholder="E-mail" required="" />
 										</div>
 										<div class="field">
-											<textarea name="message" id="message" rows="4" required="Campo obrigatório" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
+											<textarea name="message" id="message" rows="4" required="" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
 										</div>
 										<input type="hidden" name="_language" value="pt-BR" />
+										<input type="hidden" name="_next" value="//site.io/thanks.html" />
 										<ul class="actions">
 											<li><input type="submit" value="Enviar" class="special" /></li>
 											<li><input type="reset" value="Limpar" /></li>
