--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 											<textarea name="message" id="message" rows="4" required="" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
 										</div>
 										<input type="hidden" name="_language" value="pt-BR" />
-										<input type="hidden" name="_next" value="//site.io/thanks.html" />
+										<input type="hidden" name="_next" value="//budfotografia.com.br" />
 										<ul class="actions">
 											<li><input type="submit" value="Enviar" class="special" /></li>
 											<li><input type="reset" value="Limpar" /></li>
