--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 											<input type="email" name="email" id="email" placeholder="E-mail" required="" />
 										</div>
 										<div class="field">
-											<textarea name="message" id="message" rows="4" required="" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
+											<textarea name="message" id="message" rows="4" required="" placeholder="Fale sobre o tipo de orçamento... ensaios, eventos, festas e etc."></textarea>
 										</div>
 										<input type="hidden" name="_language" value="pt-BR" />
 										<input type="hidden" name="_next" value="//budfotografia.com.br" />
@@ -266,15 +266,5 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
-			<!-- <script>
-				$.ajax({
-				    url: "https://formspree.io/helissonss@gmail.com", 
-				    method: "POST",
-				    data: {message: "hello!"},
-				    dataType: "json"
-				});
-			</script> -->
-
 	</body>
 </html>
