--- a/index.html
+++ b/index.html
@@ -235,16 +235,18 @@
 							<div>
 								<section>
 									<h2>Contato / Orçamento</h2>
-									<form method="post" action="#">
+									<form method="POST" action="http://formspree.io/helissonss@gmail.com">
 										<div class="field half first">
-											<input type="text" name="name" id="name" placeholder="Nome" />
+											<input type="text" name="name" id="name" placeholder="Nome" required="" />
 										</div>
 										<div class="field half">
-											<input type="text" name="email" id="email" placeholder="E-mail" />
+											<input type="email" name="email" id="email" placeholder="E-mail" required="" />
 										</div>
 										<div class="field">
-											<textarea name="message" id="message" rows="4" placeholder="Fale sobre o tipo de orçamento... ensaio, eventos/festa, etc."></textarea>
+											<textarea name="message" id="message" rows="4" required="" placeholder="Fale sobre o tipo de orçamento... ensaios, eventos, festas e etc."></textarea>
 										</div>
+										<input type="hidden" name="_language" value="pt-BR" />
+										<input type="hidden" name="_next" value="//budfotografia.com.br" />
 										<ul class="actions">
 											<li><input type="submit" value="Enviar" class="special" /></li>
 											<li><input type="reset" value="Limpar" /></li>
