--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<h1><a href="index.html"><!-- <strong>BUD</strong>FOTOGRAFIA <--><img src="images/logo.png" alt="Bud - Fotografia em São Paulo - Brasil" /></a></h1>
 						<nav>
 							<ul>
-							    <a href="https://instagram.com/budhelisson" target="_blank" class="icon icon-insta fa-instagram"><span class="label"></span></a>
+							    <a href="https://instagram.com/budhelisson" target="_blank" class="icon icon-insta fa-instagram"><span class="label"></span></a> (11) 98393-8757
 								<li><a href="#footer">CONTATO</a></li>
 							</ul>
 						</nav>
